Fixed up readme a bit, other stuff

--- a/onplank/clamp_hanger/Makefile
+++ b/onplank/clamp_hanger/Makefile
@@ -7,17 +7,17 @@ scad: output/clamp_hanger_20.scad.stl output/clamp_hanger_30.scad.stl
 all: escad scad
 
 output/clamp_hanger_20.stl: clamp_hanger.escad
-	sh ../../bin/escad.sh '$quality = 40;include<'`pwd`'/openhw.escad>; include<'`pwd`'/clamp_hanger.escad>;pt=20;hanger();' \
-		output/clamp_hanger_20.escad.stl
+	sh ../../bin/escad.sh 'include<'`pwd`'/openhw.escad>; include<'`pwd`'/clamp_hanger.escad>;pt=20;$quality = 200;hanger();' \
+		output/clamp_hanger_20.stl
 
 output/clamp_hanger_30.stl: clamp_hanger.escad
-	sh ../../bin/escad.sh '$quality = 40;include<'`pwd`'/openhw.escad>; include<'`pwd`'/clamp_hanger.escad>;pt=30;hanger();' \
-		output/clamp_hanger_30.escad.stl
+	sh ../../bin/escad.sh 'include<'`pwd`'/openhw.escad>; include<'`pwd`'/clamp_hanger.escad>;$quality = 200;pt=30;hanger();' \
+		output/clamp_hanger_30.stl
 
 output/clamp_hanger_20.scad.stl: clamp_hanger.escad
 	sh ../../bin/scad.sh 'use<'`pwd`'/openhw.escad>; include<'`pwd`'/clamp_hanger.escad>;pt=20;hanger();' \
-		output/clamp_hanger_20.stl
+		output/clamp_hanger_20.scad.stl
 
 output/clamp_hanger_30.scad.stl: clamp_hanger.escad
 	sh ../../bin/scad.sh 'use<'`pwd`'/openhw.escad>; include<'`pwd`'/clamp_hanger.escad>;pt=30;hanger();' \
-		output/clamp_hanger_30.stl
+		output/clamp_hanger_30.scad.stl
