Cleaned up flex hose a bunch

--- a/parts/flex_hose/Makefile
+++ b/parts/flex_hose/Makefile
@@ -3,29 +3,18 @@ default:scad
 
 all: scad
 
-scad: output/flex_hose.stl output/flex_hose_loose.stl output/flex_hose_tight.stl output/flex_hose_pole_20.stl output/flex_hose_loose.stl output/flex_hose_pole_40.stl
+scad: output/m_m_0.stl output/f_m_0.stl output/f_m_20.stl output/f_m_40.stl
 
-output/flex_hose.stl: flex_hose.scad
-	sh ../../bin/scad.sh 'use<'`pwd`'/flex_hose.scad>;section();'\
-		output/flex_hose.stl
-output/flex_hose_2.stl: flex_hose.scad
-	sh ../../bin/scad.sh 'use<'`pwd`'/flex_hose.scad>;section_set(2,1);' \
-		output/flex_hose_2.stl
-output/flex_hose_9.stl: flex_hose.scad
-	sh ../../bin/scad.sh 'use<'`pwd`'/flex_hose.scad>;section_set(3,3);' \
-		output/flex_hose_9.stl
+output/m_m_0.stl: flex_hose.scad
+	sh ../../bin/scad.sh 'use<'`pwd`'/flex_hose.scad>;m_m_flex(l=0);'\
+		output/m_m_0.stl
+output/f_m_0.stl: flex_hose.scad
+	sh ../../bin/scad.sh 'use<'`pwd`'/flex_hose.scad>;f_m_flex(l=0);'\
+		output/f_m_0.stl
 
-output/flex_hose_loose.stl: flex_hose.scad
-	sh ../../bin/scad.sh 'use<'`pwd`'/flex_hose.scad>;section(0,0.5);'\
-		output/flex_hose_loose.stl
-
-output/flex_hose_tight.stl: flex_hose.scad
-	sh ../../bin/scad.sh 'use<'`pwd`'/flex_hose.scad>;section(0,-0.5);'\
-		output/flex_hose_tight.stl
-
-output/flex_hose_pole_20.stl: flex_hose.scad
-	sh ../../bin/scad.sh 'use<'`pwd`'/flex_hose.scad>;section(20);'\
-		output/flex_hose_pole_20.stl
-output/flex_hose_pole_40.stl: flex_hose.scad
-	sh ../../bin/scad.sh 'use<'`pwd`'/flex_hose.scad>;section(40);'\
-		output/flex_hose_pole_40.stl
+output/f_m_20.stl: flex_hose.scad
+	sh ../../bin/scad.sh 'use<'`pwd`'/flex_hose.scad>;f_m_flex(l=20);'\
+		output/f_m_20.stl
+output/f_m_40.stl: flex_hose.scad
+	sh ../../bin/scad.sh 'use<'`pwd`'/flex_hose.scad>;f_m_flex(l=40);'\
+		output/f_m_40.stl
