Plank attacher, says it isnt valid manifold tho

--- a/parts/flex_hose/Makefile
+++ b/parts/flex_hose/Makefile
@@ -3,7 +3,8 @@ default:scad
 
 all: scad
 
-scad: output/m_m_0.stl output/f_m_0.stl output/f_m_20.stl output/f_m_40.stl
+scad: output/m_m_0.stl output/f_m_0.stl output/f_m_20.stl output/f_m_40.stl\
+      output/plank_attach.stl
 
 output/m_m_0.stl: flex_hose.scad
 	sh ../../bin/scad.sh 'use<'`pwd`'/flex_hose.scad>;m_m_flex(l=0);'\
@@ -18,3 +19,7 @@ output/f_m_20.stl: flex_hose.scad
 output/f_m_40.stl: flex_hose.scad
 	sh ../../bin/scad.sh 'use<'`pwd`'/flex_hose.scad>;f_m_flex(l=40);'\
 		output/f_m_40.stl
+
+output/plank_attach.stl: plank_attach.scad flex_hose.scad	
+	sh ../../bin/scad.sh 'use<'`pwd`'/plank_attach.scad>;plank_attach();'\
+		output/plank_attach.stl
