Printing it exposed weaknesses and a... plainly missing hole

--- a/tools/drill/Makefile
+++ b/tools/drill/Makefile
@@ -1,7 +1,7 @@
 
 default:scad
 
-scad: output/bit_part.stl output/gear.stl
+scad: output/bit_part.stl output/gear.stl output/nob.stl output/lower_body.stl output/upper_body.stl 
 
 output/bit_part.stl: drill.scad
 	sh ../../bin/scad.sh 'use<'`pwd`'/drill.scad>; bit_part();' \
@@ -11,10 +11,14 @@ output/gear.stl: drill.scad
 	sh ../../bin/scad.sh 'use<'`pwd`'/drill.scad>; loose_gear();' \
 	output/gear.stl
 
-output/lower_body.stl: lower_body.scad
+output/lower_body.stl: drill.scad
 	sh ../../bin/scad.sh 'use<'`pwd`'/drill.scad>; lower_body();' \
 	output/lower_body.stl
 
-output/upper_body.stl: upper_body.scad
-	sh ../../bin/scad.sh 'use<'`pwd`'/drill.scad>; upper_body();' \
+output/upper_body.stl: drill.scad
+	sh ../../bin/scad.sh 'use<'`pwd`'/drill.scad>; rotate([0,-90]) upper_body();' \
 	output/upper_body.stl
+
+output/nob.stl: drill.scad
+	sh ../../bin/scad.sh 'use<'`pwd`'/drill.scad>; gear_nob();' \
+	output/nob.stl
