Changed the design to allow for a holding the rubber better and more easily do hand-held

--- a/parts/syringe/Makefile
+++ b/parts/syringe/Makefile
@@ -3,7 +3,7 @@ default:scad
 
 all: scad
 
-scad: output/inner_syringe.stl output/outer_syringe.stl
+scad: output/inner_syringe.stl output/outer_syringe.stl output/hand_syringe.stl
 
 output/inner_syringe.stl: syringe.scad
 	sh ../../bin/scad.sh 'use<'`pwd`'/syringe.scad>;inner_syringe();'\
@@ -12,3 +12,8 @@ output/inner_syringe.stl: syringe.scad
 output/outer_syringe.stl: syringe.scad
 	sh ../../bin/scad.sh 'use<'`pwd`'/syringe.scad>;outer_syringe();'\
 		output/outer_syringe.stl
+
+
+output/hand_syringe.stl: syringe.scad
+	sh ../../bin/scad.sh 'use<'`pwd`'/syringe.scad>;hand_syringe();'\
+		output/hand_syringe.stl
