Improved the makefiles i am using.. wont update everything though

--- a/reprap/carriage/Makefile
+++ b/reprap/carriage/Makefile
@@ -5,13 +5,6 @@ all: scad
 
 scad: output/carriage.stl output/rotate_lock.stl output/belt_holder_top.stl
 
-output/carriage.stl: carriage.scad
-	../../bin/scad.sh 'use<carriage.scad>; carriage();' output/carriage.stl
-
-output/rotate_lock.stl: carriage.scad
-	../../bin/scad.sh 'use<carriage.scad>; rotate_lock();' output/rotate_lock.stl
-
-output/belt_holder_top.stl: carriage.scad
-	../../bin/scad.sh 'use<carriage.scad>; belt_holder_top();' \
-	output/belt_holder_top.stl
-
+output/%.stl: carriage.scad
+	sh ../../bin/scad.sh 'use<'`pwd`'/'$<'>;'`echo $@ | cut -f 2 -d/ |cut -f 1 -d.`'();'\
+	 $@
