I removed the `hull` thing and made a more decent way to create the cavity. Also added a modified shaker.scad from http://www.thingiverse.com/thing:70744

--- a/artsy/vasable_maraca/Makefile
+++ b/artsy/vasable_maraca/Makefile
@@ -1,8 +1,17 @@
 
 default:scad
 
-scad: output/maraca.stl output/just_show.stl output/maraca_no_stem.stl
+scad: output/vasable_maraca.stl output/just_show.stl output/vasable_maraca_no_stem.stl \
+	output/shaker.stl output/vasable_shaker.stl
+
+output/shaker.stl: shaker.scad
+	sh ../../bin/scad.sh 'use<'`pwd`'/'$<'>;'`echo $@ | cut -f 2 -d/ |cut -f 1 -d.`'();' \
+		$@; admesh $@ -b $@;
+
+output/vasable_shaker.stl: shaker.scad
+	sh ../../bin/scad.sh 'use<'`pwd`'/'$<'>;'`echo $@ | cut -f 2 -d/ |cut -f 1 -d.`'();' \
+		$@; admesh $@ -b $@;
 
 output/%.stl: maraca.scad
 	sh ../../bin/scad.sh 'use<'`pwd`'/'$<'>;'`echo $@ | cut -f 2 -d/ |cut -f 1 -d.`'();' \
-		$@
+		$@; admesh $@ -b $@;
