Store bearing state, this ran quite well but it will barely rotate if compressed vertically i have to add more height. Also i feel i can reduce the radius of the balls slightly

--- a/parts/bearing/Makefile
+++ b/parts/bearing/Makefile
@@ -1,5 +1,5 @@
 
-default: output/inner.stl output/outer_half.stl output/guide.stl
+default: output/inner.stl output/outer_half.stl output/guide.stl output/just_show.stl
 
 output/%.stl: bearing.scad
 	sh ../../bin/scad.sh 'use<'`pwd`'/'$<'>;'`echo $@ | cut -f 2 -d/ |cut -f 1 -d.`'();' \
