--- a/sliver_mech/example/Makefile
+++ b/sliver_mech/example/Makefile
@@ -1,7 +1,7 @@
 
 default: pair
 
-pair: output/pair_gear.stl output/pair_holder.stl
+pair: output/pair_pgear.stl output/pair_holder.stl
 
 output/pair_%.stl: pair.scad ../gear_outer.scad
 	sh ../../bin/scad.sh 'use<'`pwd`'/'$<'>;'`echo $@ | cut -f 2- -d_ |cut -f 1 -d.`'();' \
