New recursive tree and better readme for img2dat

--- a/artsy/recursive_tree/Makefile
+++ b/artsy/recursive_tree/Makefile
@@ -1,7 +1,8 @@
 
 default:scad
 
-scad: output/recursive_tree.stl output/recursive_cupoid.stl output/recursive_spheroid.stl
+scad: output/recursive_tree.stl output/recursive_cupoid.stl output/recursive_spheroid.stl \
+	output/vtree.stl
 
 output/recursive_tree.stl: recursive_tree.scad
 	sh ../../bin/scad.sh 'use<'`pwd`'/recursive_tree.scad>; recursive_tree();' \
@@ -14,3 +15,7 @@ output/recursive_cupoid.stl: recursive_tree.scad
 output/recursive_spheroid.stl: recursive_tree.scad
 	sh ../../bin/scad.sh 'use<'`pwd`'/recursive_tree.scad>; recursive_spheroid();' \
 	output/recursive_spheroid.stl
+
+output/vtree.stl: vtree.scad
+	sh ../../bin/scad.sh 'use<'`pwd`'/vtree.scad>; whole_tree();' \
+	output/vtree.stl
