Decided the M5 nut could be pushed too, and the old thing was way overcomplicated (replaced pusher)

--- a/reprap/mini-quickfit/j-head-holder-n-pusher/Makefile
+++ b/reprap/mini-quickfit/j-head-holder-n-pusher/Makefile
@@ -8,12 +8,9 @@ scad: holder pushers pushers_3mm
 holder:	output/jh_holder.stl output/jh_holder_quickfit.stl \
 	output/jh_sliver.stl output/jh_plateless_holder.stl 
 
-pushers: output/jh_pusher_whole.stl output/jh_pusher_bottom.stl output/jh_pusher_top.stl\
-	output/jh_pusher_pincher.stl
+pushers: output/jh_pusher_bottom.stl output/jh_pusher_top.stl
 
-pushers_3mm: output/jh_pusher_whole_3mm.stl output/jh_pusher_bottom_3mm.stl \
-	output/jh_pusher_top_3mm.stl\
-	output/jh_pusher_pincher_3mm.stl
+pushers_3mm: output/jh_pusher_bottom_3mm.stl output/jh_pusher_top_3mm.stl
 
 output/jh_pusher_%.stl: params.scad jh_pusher.scad
 	sh ../../../bin/scad.sh 'use<'`pwd`'/'jh_pusher.scad'>;'`echo $@ | cut -f 2 -d/ | cut -f 2- -d_ | cut -f 1 -d.`'();'\
