Added motor holder, improved visualization a bit, motors can be shown as blocks or pretty. And other stuff. (note: the visualization mode of openscad is starting to have difficulties.. Need ways to show off..)

--- a/process/reprap/full_printer/Makefile
+++ b/process/reprap/full_printer/Makefile
@@ -1,8 +1,9 @@
 
-default: corners bed
+default: corners bed pulley
 
 corners: output/top_corner.stl output/bottom_motor_corner.stl output/bottom_bare_corner.stl 
-bed:     output/bed_holder.stl 
+bed:     output/bed_holder.stl output/bed_holder_w_motor.stl 
+pulley:  output/pulley.stl
 
-output/%.stl: fullp.scad corner.scad params.scad bed.scad
+output/%.stl: fullp.scad corner.scad params.scad bed.scad pulley.scad
 	sh bin/one.sh $< $@
