Too much stuff which i probably should have documented. And changed the pulley tower, feel i should just have two parts to connect afterwards because this is hard to print.

--- a/process/reprap/full_printer/Makefile
+++ b/process/reprap/full_printer/Makefile
@@ -8,5 +8,11 @@ pulley:  output/pulley.stl
 output/%.stl: fullp.scad corner.scad params.scad bed.scad pulley.scad
 	sh bin/one.sh $< $@
 
+output/pulley.stl: pulley.scad params.scad
+	openscad $< -o $@
+
+output/%corner.stl: corner.scad params.scad fits/nema.scad
+	sh bin/one.sh $< $@
+
 clean:
 	rm output/*.stl
