Minor fix bed regarding child() and made corner tower have the thing that hangs the pulleys attached.

--- a/process/reprap/full_printer/Makefile
+++ b/process/reprap/full_printer/Makefile
@@ -1,7 +1,8 @@
 
 default: corners bed pulley
 
-corners: output/corner.stl output/top_motor_corner.stl output/rod_block.stl
+corners: output/corner.stl output/top_motor_corner.stl output/rod_block.stl \
+	 output/pulley_head.stl
 bed:     output/bed_holder.stl output/bed_holder_w_motor.stl 
 pulley:  output/pulley.stl
 
