Added show in makefile, doesnt work. Made bed with corner a bit stronger and did something to ensure wire route.

--- a/process/reprap/full_printer/Makefile
+++ b/process/reprap/full_printer/Makefile
@@ -6,6 +6,8 @@ corners: output/corner.stl output/top_motor_corner.stl output/rod_block.stl \
 bed:     output/bed_holder.stl output/bed_holder_w_motor.stl 
 pulley:  output/pulley.stl
 
+show: output/show.stl
+
 output/%.stl: fullp.scad corner.scad params.scad bed.scad pulley.scad
 	sh bin/one.sh $< $@
 
