--- a/process/reprap/full_printer/Makefile
+++ b/process/reprap/full_printer/Makefile
@@ -2,7 +2,7 @@
 default: corners bed pulley
 
 corners: output/corner.stl output/top_motor_corner.stl output/rod_block.stl \
-	 output/pulley_head.stl
+	 output/pulley_head.stl output/pulley_clamp.stl 
 bed:     output/bed_holder.stl output/bed_holder_w_motor.stl 
 pulley:  output/pulley.stl
 
