--- a/process/various/shower_glass_hook/Makefile
+++ b/process/various/shower_glass_hook/Makefile
@@ -1,9 +1,7 @@
 
 SCAD=../../../bin/scad
 
-default: shower_glas_hook
-
-shower_glas_hook: output/shower_glas_hook.stl
-
-output/%.stl: wire_belt.scad
+output/%.stl: shower_glass_hook.scad
 	$(SCAD) module $< $@
+
+default: output/shower_glass_hook.stl
